--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.2",
+    "parallax": "^0.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-parallax": "^3.5.1"
+    "react-parallax": "^3.5.1",
+    "scroll": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
